05-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: metrics 
    - name: traefik
      protocol: TCP
      port: 8080
      targetPort: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: metro
spec:
  type: NodePort
  selector:
    app: filebrowser
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: detect-faces-in-image
  namespace: metro
spec:
  type: NodePort
  selector:
    app: detect-faces-in-image
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: metro-agent
  namespace: metro
spec:
  type: NodePort
  selector:
    app: metro-agent
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: metro
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090 

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: metro
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: node-exporter
  namespace: metro
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9100'
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  ports:
  - name: node-exporter
    protocol: TCP
    port: 9100
    targetPort: 9100
