06-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.kube-system.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-metrics
            port:
              name: traefik

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: metro
spec:
  ingressClassName: traefik
  rules:
  - host: filebrowser.metro.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filebrowser
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: metro
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus.metro.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: detect-faces-in-image
  namespace: metro
spec:
  ingressClassName: traefik
  rules:
  - host: detect-faces-in-image.metro.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: detect-faces-in-image
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metro-agent
  namespace: metro
spec:
  ingressClassName: traefik
  rules:
  - host: agent.metro.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metro-agent
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: metro
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.metro.apps.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
